fixing style bug --stylesheet was not visible on github pages

--- a/style.css
+++ b/style.css
@@ -79,4 +79,5 @@ a{
 footer{
   background-color: #4b4b4b;
   color: white;
+  padding: 10px;
 }
